# PupperWholeBodyControl

./: .gitignore  README.md
onboard/: platformio.ini
workstation/: .gitignore  CMakeLists.txt  build_and_sim  gmon.out  just_build  package.xml
workstation/PupperCplusplusController/: OldPupperModel.cpp  PupperControl.cpp  PupperModel.cpp  PupperWBC.cpp  pupper_coms_node.py  pupper_ros_node.cpp
workstation/PythonComms/: pupper_whisperer.py  run_djipupper.py
workstation/PythonComms/djipupper/: HardwareInterface.py  IndividualConfig.py
workstation/PythonComms/logs/: log.txt
workstation/include/workstation/: NumpyLogger.hpp  PupperModel.h  PupperUrdfString.hpp  PupperWBC.hpp  StateEstimation.hpp  WBCTask.hpp  WBCTaskMaster.hpp
workstation/launch/: load_pupper.launch
workstation/msg/: pupper_command.msg  pupper_reply.msg
workstation/plugins/: CMakeLists.txt  pupper.cpp  pupper.hpp  worldPlugin.cpp  worldPlugin.hpp
workstation/pupper_description/: (old)motor.xacro  (old)pupper.urdf.xacro  (old)right_leg.xacro  Joint_q_map.txt  Mass Properties and Origin Transforms.xlsx  colors.xacro  left_leg.xacro  motor.xacro  pupper.urdf  pupper.urdf.xacro  pupper_measurements  pupper_string.txt  pupper_world.world  right_leg.xacro
workstation/pupper_description/Mesh_lab_info/: Right_side_parts
workstation/pupper_description/Pupper_STL/Body/: PCB_Board.stl  PCB_Board_Shifted.dae  assembly_body_STL.stl  assembly_body_simplified.dae  part1_frontbulkhead.stl  part1_frontbulkhead_simplified.dae  part2_middlebulkhead1.stl  part2_middlebulkhead1_simplified.dae  part3_middlebulkhead2.stl  part3_middlebulkhead2_simplified.dae  part4_rightshroud.stl  part4_rightshroud_simplified.dae  part5_leftshroud.stl  part5_leftshroud_simplified.dae  part6_rearbulkhead.stl  part6_rearbulkhead_simplified.dae
workstation/pupper_description/Pupper_STL/Leg/: assembly_hip_left_STL.stl  assembly_hip_left_simplified.dae  assembly_hip_right_STL.stl  assembly_hip_right_simplified.dae  assembly_lower_link_left_STL.stl  assembly_lower_link_left_simplified.dae  assembly_lower_link_right_STL.stl  assembly_lower_link_right_simplified.dae  assembly_upper_link_left_STL.stl  assembly_upper_link_left_simplified.dae  assembly_upper_link_right_STL.stl  assembly_upper_link_right_simplified.dae  hemisphere.stl  hemisphere_simplified.dae  part1_hub.stl  part1_hub_mirrored.stl  part1_hub_mirrored_simplified.dae  part1_hub_siplified.dae  part2_upperlink.stl  part2_upperlink_simplified.dae  part3_shroud.stl  part3_shroud_simplified.dae  part4_lowerlink.stl  part4_lowerlink_mirrored.stl  part4_lowerlink_mirrored_simplified.dae  part4_lowerlink_simplified.dae
workstation/src/PupperCplusplusController/: NumpyLogger.cpp  OldPupperModel.cpp  PupperControl.cpp  PupperModel(old).cpp  PupperModel.cpp  PupperWBC.cpp  StateEstimation.cpp  WBCTaskMaster.cpp  pupper_ros_node.cpp  test_of_ros_node.cpp
workstation/src/PythonComms/: check_imu_calibration.py  contact_estimation_dev.py  create_dummy_ethernet  pid_test.py  pupper_whisperer.py  run_ahrs_calibration.py  run_calibration.py  run_djipupper.py  test_imu_response.py  test_ros_node_comms.py  utilities.py
workstation/src/PythonComms/KeyboardController/: Command.py  JoystickInterface.py
(+19 files in other folders)
